Counting leap years was fine while we had 32bit time_t - but now it is not a good idea for dates far away in the future. For dates in the year 2000 or later, use arithmetic instead (since the repeating periods are well aligned). Should fix PR 49144.